crates/core/tests/snapshots/container_from_partial_test__container_from_partial__named_struct__resets_extended.snap
---
source: crates/core/tests/container_from_partial_test.rs
expression: pretty(container.impl_full_from_partial())
---
fn from_partial(partial: Self::Partial) -> Self {
    Self {
        a: Default::default(),
        b: partial.b.unwrap_or_default(),
    }
}
