crates/core/tests/snapshots/container_from_partial_test__container_from_partial__named_struct__supports_nested.snap
---
source: crates/core/tests/container_from_partial_test.rs
expression: pretty(container.impl_full_from_partial())
---
fn from_partial(partial: Self::Partial) -> Self {
    Self {
        a: {
            let data = partial.a.unwrap_or_default();
            NestedConfig::from_partial(data)
        },
        b: {
            let data = partial.b.unwrap_or_default();
            CustomConfig::from_partial(data)
        },
        c: {
            let data = partial.c;
            match data {
                Some(data) => Some(NestedConfig::from_partial(data)),
                None => None,
            }
        },
        d: {
            let data = partial.d.unwrap_or_default();
            {
                let data = Arc::unwrap_or_clone(data);
                Arc::new(CustomConfig::from_partial(data))
            }
        },
        e: {
            let data = partial.e.unwrap_or_default();
            {
                let data = *data;
                Box::new(NestedConfig::from_partial(data))
            }
        },
    }
}
