crates/core/tests/snapshots/container_from_partial_test__container_from_partial__named_struct__supports_standard.snap
---
source: crates/core/tests/container_from_partial_test.rs
expression: pretty(container.impl_full_from_partial())
---
fn from_partial(partial: Self::Partial) -> Self {
    Self {
        a: partial.a.unwrap_or_default(),
        b: partial.b.unwrap_or_default(),
        c: partial.c.unwrap_or_default(),
        d: partial.d.unwrap_or_default(),
        e: partial.e,
        f: partial.f.unwrap_or_default(),
        g: partial.g,
        h: {
            let data = partial.h.unwrap_or_default();
            Box::new(data)
        },
    }
}
